--- a/General-Insurance-Client/src/app/footer/footer.component.html
+++ b/General-Insurance-Client/src/app/footer/footer.component.html
@@ -14,7 +14,7 @@
             <a href="#">Contact</a>
         </p>
 
-        <p class="footer-company-name">Paysurance © 2020</p>
+        <p class="footer-company-name">LTI-surance © 2021</p>
 
         <div class="footer-icons">
 
@@ -42,4 +42,3 @@
     </div>
 
 </footer>
-<p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by</p>
