--- a/General-Insurance-Client/src/app/footer/footer.component.html
+++ b/General-Insurance-Client/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
 
     <div class="footer-left">
 
-        <h3>Paysurance</h3>
+        <h3>LTI - surance</h3>
 
         <p class="footer-links">
             <a href="#">Home</a> ·
