--- a/General-Insurance-Client/src/app/home/home.component.html
+++ b/General-Insurance-Client/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="row">
 
     <div class="row">
-        <div id="head">Paysurance offers following services</div>
+        <div id="head">LTIsurance offers following services</div>
         <a routerLink="/login">
             <div class="column">
                 <div class="bg1"></div>
@@ -29,7 +29,7 @@
     </div>
     
     <div class="contain">
-        <h2 style="text-align: center;">Why Paysurance?</h2>
+        <h2 style="text-align: center;">Why LTIsurance?</h2>
         <p>When you buy insurance from us, you get more than just financial safety. You also get: our promise of simplifying complex insurance terms and conditions, quick stress-free claims, instant quotes from top insurers and being present for you in the
             toughest of times.</p>
     </div>
