--- a/General-Insurance-Client/src/app/app.component.html
+++ b/General-Insurance-Client/src/app/app.component.html
@@ -3,7 +3,7 @@
     <marquee>Paysurance provides you with two wheeler and four wheeler insurance of various types.</marquee>
 </div>
 <div class="header">
-    <img src="../assets/img/logo.png" />
+    <img src="logo.png" />
     <h3>India's largest online insurance aggregator</h3>
 </div>
 <div id="navigation">
