--- a/General-Insurance-Client/src/app/login/login.component.html
+++ b/General-Insurance-Client/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div id="form">
-    <h2 style="font-weight: normal;">Welcome to Policy Insurance, login here!</h2>
+    <h2 style="font-weight: normal;">Welcome to CarDefence Insurance, login here!</h2>
     <form [formGroup]="LoginForm" (ngSubmit)="loginCheck()">
 
         <input type="email" name="email" placeholder="Enter Email" formControlName="email" [(ngModel)]=login.email><br>
