--- a/General-Insurance-Client/src/app/about-us/about-us.component.html
+++ b/General-Insurance-Client/src/app/about-us/about-us.component.html
@@ -1,5 +1,5 @@
 <div class="contain">
-    <h2 style="text-align: center;">Why Paysurance?</h2>
+    <h2 style="text-align: center;">Why CarDefence?</h2>
     <p>When you buy insurance from us, you get more than just financial safety. You also get: our promise of simplifying complex insurance terms and conditions, quick stress-free claims, instant quotes from top insurers and being present for you in the toughest
         of times.</p>
 </div>
