--- a/General-Insurance-Client/src/app/app.component.css
+++ b/General-Insurance-Client/src/app/app.component.css
@@ -3,7 +3,8 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: rgb(230, 131, 66);
+    background-color: #42A5FF;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 li {
@@ -16,6 +17,7 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #userName {
@@ -27,24 +29,11 @@ li a {
 }
 
 li a:hover {
-    background-color: rgb(236, 102, 12);
+    background-color: #0887FB;
 }
 
 #navigation {
     margin-bottom: 10px;
-}
-
-.header {
-    background-color: #f1f1f1;
-    padding: 20px;
-    text-align: center;
-}
-
-#marq {
-    background-color: rgb(230, 131, 66);
-    padding: 5px;
-    box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 h3 {
