--- a/General-Insurance-Client/src/app/app.component.html
+++ b/General-Insurance-Client/src/app/app.component.html
@@ -1,11 +1,6 @@
-<!-- <app-register></app-register>-->
-<div id="marq">
-    <marquee>Paysurance provides you with two wheeler and four wheeler insurance of various types.</marquee>
-</div>
-<div class="header">
-    <img src="logo.png" />
-    <h3>India's largest online insurance aggregator</h3>
-</div>
+<img src="../assets/img/logo.png" style="align-self: center;">
+
+
 <div id="navigation">
     <ul>
         <li><a routerLink="home">Home</a></li>
@@ -21,5 +16,11 @@
         <li *ngIf="ifUsername" style="float: right;"><a routerLink="logout">Logout</a></li>
     </ul>
 </div>
+<!--
+<div class="header">
+    <img src="../assets/img/logo.png" />
+    <h3>India's largest online insurance aggregator</h3>
+</div>
+-->
+
 <router-outlet></router-outlet>
-<app-footer></app-footer>
