--- a/General-Insurance-Client/src/app/footer/footer.component.html
+++ b/General-Insurance-Client/src/app/footer/footer.component.html
@@ -3,18 +3,18 @@
 
     <div class="footer-left">
 
-        <h3>LTI - surance</h3>
+        <h3>CarDefence</h3>
 
         <p class="footer-links">
             <a href="#">Home</a> ·
             <a href="#">Blog</a> ·
             <a href="#">Pricing</a> ·
             <a href="#">About</a> ·
-            <a href="#">Faq</a> ·
+            <a href="#">FAQ</a> ·
             <a href="#">Contact</a>
         </p>
 
-        <p class="footer-company-name">LTI-surance © 2021</p>
+        <p class="footer-company-name">CarDefence © 2021</p>
 
         <div class="footer-icons">
 
