--- a/General-Insurance-Client/src/app/home/home.component.html
+++ b/General-Insurance-Client/src/app/home/home.component.html
@@ -1,7 +1,23 @@
 <div class="row">
 
+        <div class="contain">
+            <h2 style="text-align: center;">Why CarDefence?</h2>
+            <p>When you buy insurance from us, you get more than just financial safety. You also get: our promise of simplifying complex insurance terms and conditions, quick stress-free claims, instant quotes from top insurers and being present for you in the
+                toughest of times.</p>
+        </div>
+    
+        <div class="contain">
+            <h2 style="text-align: center;">Why Insurance for your vehicle is necessary</h2>
+            <p>With the update in the Motor Vehicle Act 2019 it has become even more essential to know about the various aspects that affect you as an owner of a vehicle. Motor insurance is a major aspect that you need to know about.​​​​​​​ Owners of cars always
+                take a pride for reasons of state of luxury and comfort that they get out of such possessions. Although they offer comfort still driving the vehicles in the public places should be given prior importance as they may pose great threat to the
+                life of the driver and the travelers of the vehicles. Not only the owner's vehicle may face damages but sometimes it may cause damage to the other properties. For purposes of safety and security Law has made it compulsory that all the owners
+                of vehicles should possess Car insurance​. When a car owner has the insurance he can protect himself from the risks related to finance and expense that he has o bear when an accident occurs. The question of affordability arises when one has
+                to face the unexpected expenses along with the legal expenses due to the accident case tried in the court of law. Such heavy expenses cannot be borne by an individual.</p>
+        </div>
+   
+    
     <div class="row">
-        <div id="head">LTIsurance offers following services</div>
+        <div id="head">CarDefence offers following services</div>
         <a routerLink="/login">
             <div class="column">
                 <div class="bg1"></div>
@@ -28,19 +44,6 @@
         </a>
     </div>
     
-    <div class="contain">
-        <h2 style="text-align: center;">Why LTIsurance?</h2>
-        <p>When you buy insurance from us, you get more than just financial safety. You also get: our promise of simplifying complex insurance terms and conditions, quick stress-free claims, instant quotes from top insurers and being present for you in the
-            toughest of times.</p>
-    </div>
-
-    <div class="contain">
-        <h2 style="text-align: center;">Why Insurance for your vehicle is necessary</h2>
-        <p>With the update in the Motor Vehicle Act 2019 it has become even more essential to know about the various aspects that affect you as an owner of a vehicle. Motor insurance is a major aspect that you need to know about.​​​​​​​ Owners of cars always
-            take a pride for reasons of state of luxury and comfort that they get out of such possessions. Although they offer comfort still driving the vehicles in the public places should be given prior importance as they may pose great threat to the
-            life of the driver and the travelers of the vehicles. Not only the owner's vehicle may face damages but sometimes it may cause damage to the other properties. For purposes of safety and security Law has made it compulsory that all the owners
-            of vehicles should possess Car insurance​. When a car owner has the insurance he can protect himself from the risks related to finance and expense that he has o bear when an accident occurs. The question of affordability arises when one has
-            to face the unexpected expenses along with the legal expenses due to the accident case tried in the court of law. Such heavy expenses cannot be borne by an individual.</p>
-    </div>
+    
    
 </div>
