--- a/General-Insurance-Client/src/app/forgot-password/forgot-password.component.css
+++ b/General-Insurance-Client/src/app/forgot-password/forgot-password.component.css
@@ -27,11 +27,11 @@ input,
 }
 
 input[type=submit]{
-    background-color: rgb(230, 131, 66);
+    background-color: #42A5FF;
 }
 
 input[type=button]{
-    background-color: rgb(230, 131, 66);
+    background-color: #42A5FF;
 }
 
 div.text-danger{
