--- a/General-Insurance-Client/src/app/vehicle/vehicle.component.css
+++ b/General-Insurance-Client/src/app/vehicle/vehicle.component.css
@@ -25,7 +25,7 @@ select,
 }
 
 input[type=submit] {
-    background-color: rgb(230, 131, 66);
+    background-color: #42A5FF;
 }
 
 div.text-danger {
@@ -50,7 +50,7 @@ div.text-danger {
 .donate-now input {
     display: block;
     position: absolute;
-    background-color: rgb(230, 131, 66);
+    background-color: #42A5FF;
     padding: 10px 25px 10px 25px;
     border-color: black;
     border-radius: 4px;
@@ -121,13 +121,13 @@ div.text-danger {
 }
 
 .progressbar li.active {
-    color: rgb(230, 131, 66);
+    color: #42A5FF;
 }
 
 .progressbar li.active:before {
-    border-color: rgb(230, 131, 66);
+    border-color: #42A5FF;
 }
 
 .progressbar li.active+li:after {
-    background-color: rgb(230, 131, 66);
+    background-color: #42A5FF;
 }
