--- a/General-Insurance-Client/src/app/admin-dashboard/admin-dashboard.component.css
+++ b/General-Insurance-Client/src/app/admin-dashboard/admin-dashboard.component.css
@@ -41,6 +41,6 @@ li a {
 /* Change the link color on hover */
 
 li a:hover {
-    background-color: rgb(236, 102, 12);
+    background-color: #42A5FF;
     color: white;
 }
