--- a/General-Insurance-Client/src/app/payment/payment.component.css
+++ b/General-Insurance-Client/src/app/payment/payment.component.css
@@ -46,7 +46,7 @@ input,
 
 .box {
     text-align: center;
-    background-color: rgb(230, 131, 66);
+    background-color: #42A5FF;
     padding: 15px;
     margin: 0 50px 0 50px;
     font-size: 30px;
@@ -61,7 +61,7 @@ input[type=submit] {
     float: center;
     padding: 5 15px 5px 15px;
     margin: 0 150px 0 150px;
-    background-color: rgb(230, 131, 66);
+    background-color: #42A5FF;
 }
 
 div.text-danger {
@@ -127,13 +127,13 @@ div.text-danger {
 }
 
 .progressbar li.active {
-    color: rgb(230, 131, 66);
+    color: #42A5FF;
 }
 
 .progressbar li.active:before {
-    border-color: rgb(230, 131, 66);
+    border-color: #42A5FF;
 }
 
 .progressbar li.active+li:after {
-    background-color: rgb(230, 131, 66);
+    background-color: #42A5FF;
 }
