--- a/General-Insurance-Client/src/app/show-plans/show-plans.component.css
+++ b/General-Insurance-Client/src/app/show-plans/show-plans.component.css
@@ -50,7 +50,7 @@
 }
 
 .button {
-    background-color: rgb(230, 131, 66);
+    background-color: #42A5FF;
     border-radius: 5px;
     color: white;
     padding: 10px 20px;
