--- a/General-Insurance-Client/src/app/insurance-plan/insurance-plan.component.html
+++ b/General-Insurance-Client/src/app/insurance-plan/insurance-plan.component.html
@@ -44,11 +44,15 @@
     </form>
 
 </div>
+
 <div id="form">
-    <div id="card" *ngFor="let item of appliedEstimates">
-        <div id="type">{{item.type}}</div>
-        <div id="price"><button class="button" (click)="onClickPrice(item.type, item.price, item.coverage, item.noOfYears)">₹{{item.price}}</button></div>
-        <div id="coverage">Total Coverage of:{{item.coverage}}</div>
-        <div id="year">Total years {{item.noOfYears}}</div>
+    <div *ngIf="appliedEstimates?.length > 0">
+        <div id="card" *ngFor="let item of appliedEstimates">
+            <div id="type">{{item.type}}</div>
+            <div id="price"><button class="button" (click)="onClickPrice(item.type, item.price, item.coverage, item.noOfYears)">₹{{item.price}}</button></div>
+            <div id="coverage">Total Coverage of:{{item.coverage}}</div>
+            <div id="year">Total years {{item.noOfYears}}</div>
+        </div>
+
     </div>
 </div>
