--- a/General-Insurance-Client/src/app/about-us/about-us.component.html
+++ b/General-Insurance-Client/src/app/about-us/about-us.component.html
@@ -11,3 +11,8 @@
         should possess Car insurance​. When a car owner has the insurance he can protect himself from the risks related to finance and expense that he has o bear when an accident occurs. The question of affordability arises when one has to face the unexpected
         expenses along with the legal expenses due to the accident case tried in the court of law. Such heavy expenses cannot be borne by an individual.</p>
 </div>
+<div class="contain">
+    <h2 style="text-align: center;">Contributors</h2>
+    <p style="text-align: center;">Archan Valvi &nbsp; &nbsp; &nbsp;&nbsp;  Madhura Pharande &nbsp; &nbsp; &nbsp; &nbsp; Soumya Vaddepally &nbsp;&nbsp; &nbsp;&nbsp;   Rohit Kumar&nbsp;&nbsp; &nbsp; &nbsp; Sibansh Pal</p>
+
+</div>
